--- a/图书管理系统/图书管理系统/图书管理系统.csproj
+++ b/图书管理系统/图书管理系统/图书管理系统.csproj
@@ -34,6 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -72,6 +73,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RFIDDBDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>RFIDDBDataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="sqlConnect.cs" />
     <EmbeddedResource Include="addBookFrom.resx">
       <DependentUpon>addBookFrom.cs</DependentUpon>
     </EmbeddedResource>
@@ -102,6 +109,17 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="RFIDDBDataSet.xsc">
+      <DependentUpon>RFIDDBDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="RFIDDBDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>RFIDDBDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="RFIDDBDataSet.xss">
+      <DependentUpon>RFIDDBDataSet.xsd</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
