--- a/图书管理系统/图书管理系统/App.config
+++ b/图书管理系统/图书管理系统/App.config
@@ -3,7 +3,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="RFIDconnstr"
+        <add name="Connstr"
             connectionString="Data Source=(local);Initial Catalog=RFIDDB;User ID=sa;Password=000000"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
