--- a/图书管理系统/图书管理系统/图书管理系统.csproj
+++ b/图书管理系统/图书管理系统/图书管理系统.csproj
@@ -73,6 +73,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reader.cs" />
     <Compile Include="RFIDDBDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
