借还系统功能完成

--- a/图书馆借还系统/图书馆借还系统/图书馆借还系统.csproj
+++ b/图书馆借还系统/图书馆借还系统/图书馆借还系统.csproj
@@ -67,6 +67,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reader.cs" />
     <Compile Include="ReturnForm.cs">
       <SubType>Form</SubType>
     </Compile>
